Bug 440335 - Last selected brush is not saved between restarts. Can cause crash if one isn't chosen.
Summary: Last selected brush is not saved between restarts. Can cause crash if one isn...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-27 18:35 UTC by Ralek Kolemios
Modified: 2021-07-28 13:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralek Kolemios 2021-07-27 18:35:52 UTC
When starting Krita for the first time after a full system restart, a default brush is not selected in the brush presets docker.

If you attempt to change brush size or draw with any brush-utilizing tool that isn't the basic brush tool without first selecting a brush, Krita will crash without warning or dialogue.

5.0.0 1780194
Comment 1 Lynx3d 2021-07-28 13:07:14 UTC
Git commit d8f0a4c1908ce97557d4c2aafb076af8aa6021bf by Mathias Wein.
Committed on 28/07/2021 at 13:06.
Pushed by mwein into branch 'master'.

Make KoResourceServer::resource actually try file and name if md5 is empty

M  +0    -3    libs/resources/KoResourceServer.h

https://invent.kde.org/graphics/krita/commit/d8f0a4c1908ce97557d4c2aafb076af8aa6021bf