Make KoResourceServer::resource actually try file and name if md5 is empty

BUG:440335